# TcpServer

./: CMakeLists.txt  README.md  filereceiver.cpp  filereceiver.h  fullscreenimagepreview.cpp  fullscreenimagepreview.h  iamgescrolllabel.cpp  imagepreviewlabel.cpp  imagepreviewlabel.h  imagescrolllabel.h  imagescrollplayer.cpp  imagescrollplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpserver.cpp  tcpserver.h
